deploy/manifests/prod/us-east-2/tenant/storetheindex/instances/cera/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer
spec:
  template:
    spec:
      serviceAccountName: storetheindex
      terminationGracePeriodSeconds: 600
      containers:
        - name: indexer
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              cpu: "7"
              memory: 60Gi
            requests:
              cpu: "7"
              memory: 60Gi
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - r6a.2xlarge
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - us-east-2c
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cera-data
